--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babel-preset-react-app": "^6.1.0",
     "bfj": "6.1.1",
     "caniuse-lite": "^1.0.30000971",
+    "canvas-nest.js": "^2.0.4",
     "case-sensitive-paths-webpack-plugin": "2.1.2",
     "chalk": "2.4.1",
     "css-loader": "1.0.0",
